platform/keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:11.0.2
        ports:
        - name: http-keycloak
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
        volumeMounts:
        - mountPath: /secrets
          name: db-user-secret
          readOnly: true
      volumes:
      - name: db-user-secret
        secret: 
          secretName: keycloak-db
          defaultMode: 0400
          items:
          - key: username
            path: db-username
          - key: password
            path: db-password
          
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
  labels:
    app: keycloak
spec:
  ports:
  - name: http-keycloak
    port: 80
    targetPort: http-keycloak
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak
  namespace: auth
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - auth.commonpool.net
    tls:
      httpsRedirect: true 
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - auth.commonpool.net
    tls:
      mode: SIMPLE 
      credentialName: commonpool-cert-prod
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: auth
spec:
  hosts:
  - auth.commonpool.net
  gateways:
  - keycloak
  http:
  - name: "keycloak"
    route:
    - destination:
        host: keycloak
